Reworked login/registration system. API keys are now encrypted.

--- a/lingo-voyage-server/.env.example
+++ b/lingo-voyage-server/.env.example
@@ -2,3 +2,5 @@ PORT=4000
 MONGODB_URI=mongodb://localhost:27017/lingovoyage
 # The text below will automatically be replced with a random code
 JWT_SECRET=YOUR_SECRET_HERE
+# 32-byte base64-encoded field encryption key (auto-generated on first run)
+FIELD_ENC_KEY=YOUR_FIELD_ENC_KEY_HERE
